# Sakura

./: .copilotignore  .gitignore  CMakeLists.txt  CMakePresets.json  VERSION.json  VERSION_HOOKS.json  vcpkg.json  version.h.in
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: post-commit  pre-commit
.github/instructions/: sakura.instructions.md
.github/workflows/: build.yml
build-local/: CMakeCache.txt
config/: achievements.json
doc/: ARCHITECTURE.md  CHART_FORMAT_SPEC.md  CODING_STANDARDS.md  DEPENDENCIES.md  QUICKSTART.md  REVIEW_v0.5.3.md  ROADMAP.md  prompt_example.md
doc/old_reference/: README_old.md  ROADMAP_old.md  ROADMAP_v2_phases0-3.md  nosimplify.instructions_old.md
doc/roadmap/: APPENDICES.md  PHASE4_CONTENT.md  PHASE5_DATA.md  PHASE6_POLISH.md  PHASE7_RELEASE.md  PHASE8_ONLINE.md
resources/charts/: README.md
resources/charts/cherry_blossom/: expert.json  hard.json  info.json  normal.json
resources/charts/digital_dream/: expert.json  hard.json  info.json
resources/charts/sakura_storm/: expert.json  info.json
resources/charts/spring_breeze/: hard.json  info.json  normal.json
resources/charts/test-song/: info.json  normal.json
resources/charts/tutorial_song/: easy.json  info.json
resources/images/: README.md
scripts/: install_version_hooks.py  sync_repo_version.py  version_hook_entry.py
src/: main.cpp
src/audio/: audio_manager.cpp  audio_manager.h  audio_visualizer.cpp  audio_visualizer.h  sfx_generator.cpp  sfx_generator.h
src/core/: app.cpp  app.h  config.cpp  config.h  frame_input_buffer.h  input.cpp  input.h  layout.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  theme.cpp  theme.h  timer.cpp  timer.h  window.cpp  window.h
src/data/: database.cpp  database.h
src/editor/: editor_command.cpp  editor_command.h  editor_core.cpp  editor_core.h  editor_mouse_area.cpp  editor_mouse_area.h  editor_preview.cpp  editor_preview.h  editor_timeline.cpp  editor_timeline.h
src/effects/: background.cpp  background.h  glow.cpp  glow.h  particle_system.cpp  particle_system.h  screen_shake.cpp  screen_shake.h  shader_manager.cpp  shader_manager.h  trail.cpp  trail.h
src/game/: achievement_manager.cpp  achievement_manager.h  approach_visuals.cpp  approach_visuals.h  chart.h  chart_loader.cpp  chart_loader.h  game_state.cpp  game_state.h  judge.cpp  judge.h  note.h  pp_calculator.cpp  pp_calculator.h  score.cpp  score.h  tutorial_data.cpp  tutorial_data.h
src/scene/: scene.h  scene_calibration.cpp  scene_calibration.h  scene_chart_wizard.cpp  scene_chart_wizard.h  scene_editor.cpp  scene_editor.h  scene_game.cpp  scene_game.h  scene_loading.cpp  scene_loading.h  scene_manager.cpp  scene_manager.h  scene_menu.cpp  scene_menu.h  scene_pause.cpp  scene_pause.h  scene_result.cpp  scene_result.h  scene_select.cpp  scene_select.h  scene_settings.cpp  scene_settings.h  scene_splash.cpp  scene_splash.h  scene_stats.cpp  scene_stats.h  scene_tutorial.cpp  scene_tutorial.h  test_scenes.h
src/ui/: button.cpp  button.h  dropdown.cpp  dropdown.h  input_field.cpp  input_field.h  label.cpp  label.h  panel.cpp  panel.h  progress_bar.cpp  progress_bar.h  scroll_list.cpp  scroll_list.h  slider.cpp  slider.h  tab_bar.cpp  tab_bar.h  text_input.cpp  text_input.h  toast.cpp  toast.h  toggle.cpp  toggle.h  ui_base.h  visual_style.cpp  visual_style.h
src/utils/: easing.h  logger.cpp  logger.h
tests/: CMakeLists.txt  test_achievement_manager.cpp  test_approach_visuals.cpp  test_chart_loader_builtin.cpp  test_chart_loader_legacy.cpp  test_frame_input_buffer.cpp  test_framework.h  test_judge.cpp  test_main.cpp  test_pp_calculator.cpp  test_score.cpp  test_tutorial_data.cpp
tools/git-version-hooks/: .gitignore  README.md  pyproject.toml
tools/git-version-hooks/scripts/: install_version_hooks.py
tools/git-version-hooks/src/version_hooks_tool/: __init__.py  version_hook.py
